# unfollowery

./: .gitignore  LICENSE  README.md  bot.py  client_secret.json  main.py  main_bot.py  requirements.txt  runscheduled.py  setup.cfg  stats_bot.py
unfollowery/: LICENSE  README.md  __cfg.py  crawler.py
unfollowery/unfollowery/: __init__.py  __utils.py
utils/: config.py  set_chrome.py
