[metadata]
name = unfollowery
version = 1.0.0
author = Luka Sosiashvili
author_email = luksosiashvili@gmail.com
description = For generating Instagram followers/unfollowers of the user in a list & file (without using Instagram API)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LUKASANUKVARI/unfollowery
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    selenium
    pandas
